# AVM-avmmod

./: CMakeLists.txt  main.c
libs/: linklist.c  linklist.h
libs/avm/includes/: avm.h  cfutils.h  class.h  classloader.h  defines.h  frame.h  fss.h  hardm.h  heap.h  initializer.h  interpretator.h  linklist.h  mem.h  object.h  rlogger.h  stack.h  stdout.h  thread.h
libs/avm/src/: avm.c  cfutils.c  classloader.c  fss.c  hardm.c  heap.c  initializer.c  interpretator.c  linklist.c  mem.c  rlogger.c  stack.c  stdout.c  thread.c
